Avoid word wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -113,8 +113,8 @@ nav li a:hover{
 }
 
 .images img{
-  width: 35px;
-  height: 35px;
+  width: 40px;
+  height: 40px;
   vertical-align: middle;
 }
 
